--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install && cd .."
   },
   "dependencies": {
     "react": "18.2.0",
@@ -17,7 +18,7 @@
     "react-native-screens": "~3.25.0",
     "react-native-tab-view": "^3.0.0",
     "@react-navigation/stack": "6.2.1",
-    "react-native-pager-view": "5.4.24",
+    "react-native-pager-view": "6.2.1",
     "react-native-reanimated": "3.5.4",
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
@@ -46,6 +47,9 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "resolutions": {
+    "react-native-pager-view": "~6.2.1"
   },
   "engines": {
     "node": ">=16"
